--- a/Projeto/Eletrônica/index.html
+++ b/Projeto/Eletrônica/index.html
@@ -218,17 +218,8 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<p>.. _nboat:</p>
-<p>..
-    sensors
-    calibration
-    connections
-    challenges
-    bugs
-    softwares</p>
-<p>==========
-Eletrônica
-==========</p>
+<h1>Eletrônica</h1>
+
 <p>A parte eletrônica do veleiro Nboat é composta por:</p>
 <ul>
 <li>Placa central para o driver dos atuadores;</li>
