--- a/Projeto/Elétrica/index.html
+++ b/Projeto/Elétrica/index.html
@@ -178,14 +178,54 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<pre><code>.. _nboatmini:
-</code></pre>
-<p>========
-Elétrica
-========</p>
-<p>.. falar como está implementada a parte elétrica do nboat</p></div>
+<h1>Elétrica</h1>
+
+<p><img alt="Screenshot" src="../../img/fboat.jpg" /></p>
+
+<p>A parte eletrônica do veleiro Nboat é composta por:</p>
+<ul>
+<li>Placa central para o driver dos atuadores;</li>
+<li>Driver dos atuadores dual-vnh5019-motor-shield (acoplado ao arduino uno);</li>
+<li>Um arduino Mega;</li>
+<li>Um arduino Uno;</li>
+<li>Potenciômetro da vela;</li>
+<li>Potenciômetro do leme;</li>
+<li>Sensores do vento;</li>
+<li>Pixhawk 2.4.6<ul>
+<li>GPS</li>
+<li>IMU</li>
+<li>Telemetria 433 MHz</li>
+</ul>
+</li>
+<li>Raspberry Pi;</li>
+<li>Modem wifi;</li>
+<li>Ubiquiti UNIFI AC MESH;</li>
+<li>Buzina;</li>
+<li>Transmissor e receptor Rádio R7;</li>
+</ul>
+<p>Uma breve explicação sobre cada componente é dada a seguir.</p>
+<h2 id="placa-central">Placa central</h2>
+<p>A placa central conecta e alimenta todos os componentes dos drivers: os potenciômetros, os arduinos e o dual-vnh5019-motor-shield, além de interfacear com a pixhawk. Ela fica localizada dentro da caixa preta no compartimento 3 e a ideia é que os sinais de dados que vêm dos outros compartimentos são conectados a essa placa usando cabos de rede rj45.</p>
+<h2 id="shield-atuadores">Shield atuadores</h2>
+<p>O dual-vnh5019-motor-shield manda sinais de PWM para os atuadores. Possui limite de corrente de 12A com picos de 30A por canal, sendo dois canais de saída, um para o guincho da vela e outro para o atuador linear do leme.</p>
+<h2 id="arduinos">Arduinos</h2>
+<p>O arduino mega recebe sinal de PWM (faixa de 1000 a 2000), traduz esse sinal para valores de ângulos de atuador ([-90, 90] graus) e envia por I2C para o arduino uno.</p>
+<p>O arduino uno está conectado ao shield dual-vnh5019-motor-shield e nele está o controle PID de posição dos atuadores. Este controle lê o valor do potenciômetro da porta analógica [0, 1023] (10 bits), traduz para valor de ângulo de atuador e compara com o ângulo enviado pelo arduino mega, gerando um erro. Neste erro são aplicados os ganhos P e I e então este valor é passado como velocidade para o atuador ([-400, 400]) usando a função <em>md.setM1Speed(velocidade)</em> como exemplo de velocidade para o canal M1.</p>
+<h2 id="potenciometros">Potenciômetros</h2>
+<p>Os potenciômetros da vela e do leme servem para dar ao controlador de posição dos atuadores um retorno sobre a posição atual do atuador. O pot do leme é montado na parte superior do leme, que fica dentro do compartimento 4 e gira junto com o leme, mapeando sua posição. O pot da vela está no compartimento 2. A impressora 3d foi usada para fazer uma peça que encaixa no eixo do guincho e, a medida que ele gira, também gira o potenciômetro que está acoplado na base.</p>
+<h2 id="sensores-de-vento">Sensores de vento</h2>
+<p>Os sensores de vento ficam na proa do nboat. No momento temos um que mede a velocidade (speed) e o outro mede a direção. Essas informações do vento são usadas pela Pixhawk para calcular a posição da vela para que o veleiro ganhe velocidade. </p>
+<h2 id="pixhawk">Pixhawk</h2>
+<p>A pixhawk é o processador central de baixo nível. Nela ficam os controles de movimento do nboat e o planejamento da missão, além da coleta dos dados dos sensores. O kit Pixhawk vem com um IMU e um GPS, e a pixhawk faz toda a parte de filtragem dos dados, estimação do estado e navegação (no sentido Fossen). A pixhawk roda Ardupilot Ardurover com configuração específica para veleiro. O firmware e os parâmetros podem ser encontrados neste branch.</p>
+<h2 id="raspberry-pi">Raspberry Pi</h2>
+<p>A Raspberry Pi fica com o processamento de alto nível, que é o processamento de imagem ou outra operação mais exija mais processamento e memória. Ela também serve de interface wifi com o mundo externo, já que se conecta a Pixhawk e consegue ler seus valores usando o MAVROS.</p>
+<h2 id="wifi">WiFi</h2>
+<p>O Ubiquiti UNIFI AC MESH serve para extender o sinal wifi gerado pelo nboat e permitir comunicação de alta velocidade com a estação base.</p>
+<p>O modem wifi cria e gerencia a rede interna, que conecta o Ubiquiti UNIFI AC MESH e a raspberry.</p></div>
             </div>
         </div>
+    </div>
+
 
         <footer class="col-md-12">
             <hr>
