--- a/Projeto/Estrutura/index.html
+++ b/Projeto/Estrutura/index.html
@@ -203,12 +203,10 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<pre><code>.. _nboatmini:
-</code></pre>
-<p>============
-Estrutura
-============</p>
-<p>.. talk about the fisical aspect of the robots and the challenges involved</p>
+<h1>Estrutura</h1>
+
+<p><img alt="Screenshot" src="../../img/fboat.jpg" /></p>
+
 <h2 id="construcao">Construção</h2>
 <p>O veleiro Nboat II (será chamado de Nboat neste documento) foi construido em meados de 2015. O projeto estrutural do veleiro foi feito pelo Engenheiro naval Fred e sua construção foi comandada pelo Zeca, que tem uma oficina para construção e manutenção de embarcações nos arredores da Redinha.</p>
 <p>.. image:: ./images/estrutura1.jpg
