--- a/Projeto/Experimentos/index.html
+++ b/Projeto/Experimentos/index.html
@@ -188,10 +188,12 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<p>============
-Experimentos
-============</p>
+<h1>Experimentos</h1>
+
 <h2 id="montagem-do-veleiro">Montagem do veleiro</h2>
+
+<p><img alt="Screenshot" src="../../img/fboat.jpg" /></p>
+
 <p>1) O primeiro passo é montar o leme. Devido ao seu tamanho, talvez seja preciso levantar o casco para encaixar o leme em seu compartimento. Duas pessoas (ou mais) levantam o casco enquanto uma pessoa vai por baixo e encaixa o leme no seu buraco. Em seguida o casco é baixado até descançar novamente na carroça. Alternativamente, o engate da carroça, que neste momento está apoiado em uma cadeira ou uma caixa, pode ser descido até o chão, de forma que a traseira se eleve e talvez dê para encaixar o leme. Após esta etapa, uma pessoa mantém o leme elevado e, pelo compartimento 4, a haste que encaixa no atuador linear é aparafusada ao leme. Em seguida é preciso calibrar o leme. Com o sistema do veleiro e o rádio ligado, certifique-se que há o controle manual pelo rádio movendo os sticks e vendo se o leme e/ou a vela se mexem. Então, deixe o stick do leme (stick direito, movimento horizontal) na posição central e gire o potenciometro cuidadosamente. Perceba que girando o potenciometro em um sentido o atuador retrai e girando em outro sentido o atuador abre. Então, observando a faixa de cores no atuador linear, ajuste o potenciometro até que o atuador pare na cor preta. Em seguida, encaixe o braço do potenciometro na vela, tendo cuidado para manter a posição do potenciometro (normalemente ele gira um pouco e o atuador se move). Por fim, use os trims para um ajuste fino do leme, de modo que ele fique alinhado corretamente;</p>
 <p>.. image:: ./images/exp2_label.png
     :width: 60 %
