--- a/Projeto/Construção/index.html
+++ b/Projeto/Construção/index.html
@@ -208,35 +208,19 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<pre><code>.. index.md:
-</code></pre>
-<p>============
-Construction
-============</p>
-<p>.. talk about the fisical aspect of the robots and the challenges involved</p>
+<h1>Construção</h1>
+
 <h2 id="nboat-i">Nboat I</h2>
 <p>At the beggining we bought a comerctial RC controlled sailboat called RC Moonsoon Nauticus (link). This kind of sailboat is usually used for entartainement. The idea was to personalize this sailboat for our needs. The sailboat is shown in the image bellow.</p>
-<p>.. image:: ./images/1.jpg
-    :scale: 10 %
-    :align: center</p>
+
+<p><img alt="Screenshot" src="../../img/fboat.jpg" /></p>
+
 <p>We first tried to brute force opena an aperture in the front of the sailboat to better allow the intruction of our needed eletronics as shown in the image bellow. </p>
-<p>.. image:: ./images/2.jpg
-    :scale: 10 %
-    :align: center</p>
-<p>After some experiments we realized that this wanst enough, because as soon as the water get inside the hull, our eletrocnits would be affected. So we decided to buil a safer compartiment in the same area to isolate our eletronics from watter.</p>
-<p>.. image:: ./images/3.jpg
-    :scale: 10 %
-    :align: center</p>
-<p>.. image:: ./images/4.jpg
-    :scale: 10 %
-    :align: center</p>
-<p>.. image:: ./images/5.jpg
-    :scale: 10 %
-    :align: center</p>
-<h2 id="wqboat">WQboat</h2>
-<p>First Try
-+++++++++</p>
+
 <h2 id="nboat-ii">Nboat II</h2>
+
+<p><img alt="Screenshot" src="../../img/fboat.jpg" /></p>
+
 <h2 id="electronics">Electronics</h2>
 <p>We decided to use the arduino as the main processing hardware in this prototyping phase and to integrate our system at this first moment. So we realized that the minimal necessary information to allow autonomous sailing were (at that time): position (GPS), current heading (compass or 9DOF IMU) and wind direction (wind vane) (latter we figured that control the sail angle could be done mechanically).</p>
 <p>With these necessary information, we started to develop our first and rudimentary autonomous sailing strategy. The idea was to constantly adjust the sailboat's heading (this is done by the rudder) and to get forward velocity (by adjusting the sail angle). Our first hypothesis was that if a sailboat does theses steps it will eventually reach a desired position. So, in this case the sailboat has two independent controllers: one for the sail, responsible for choosing the "right" sail angle so the sailboat gets some forward velocity; and one for the rudder, responsible for choosing the "right" rudder position so the sailboat follows a desired heading (the one that leads to the target point).</p>
